# medical-triage

./: Dockerfile  README.md  app.py  baseline.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  setup.py  ui_app.py
server/: app.py
src/medical_triage/: __init__.py  env.py  grader.py  models.py  patients.py
tests/: test_env.py
